<resources>
    <string name="app_name">cubiqua</string>

    <string name="tab_recorder">Recorder</string>
    <string name="tab_monitor">Monitor</string>

    <string name="lbl_loc_pholder">Location: </string>
    <string name="lbl_acc_pholder">Accelerometer: </string>
    <string name="lbl_gyro_pholder">Gyroscope: </string>
    <string name="lbl_mag_pholder">Magnetometer: </string>
    <string name="lbl_device_list_pholder">Device List: </string>
    <string name="lbl_record_status">Record Status: </string>

    <string name="str_radio_walk">Walk</string>
    <string name="str_radio_jump">Jump</string>
    <string name="str_radio_squat">Squat</string>
    <string name="str_radio_sit">Sit</string>
    <string name="str_radio_lay">Lay</string>

    <string name="btn_st_start">Start</string>
    <string name="btn_st_stop">Stop</string>

    <string name="loc_pholder">Location placeholder</string>
    <string name="acc_pholder">Accelerometer placeholder</string>
    <string name="gyro_pholder">Gyroscope placeholder</string>
    <string name="mag_pholder">Magnetometer placeholder</string>
    <string name="device_list_pholder">Device List placeholder</string>
    <string name="recstatus_pholder">Record Status placeholder</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="pref_db_sync_title">Sync with remote SQL Database</string>
    <string name="pref_db_sync_summary_on">Recorded data will be sent to a remote Database by pressing Stop
    </string>
    <string name="pref_db_sync_summary_off">Data will not be synchronized to remote SQL Database</string>

    <!-- File server Preferences -->
    <string name="pref_file_server_category">File Server</string>
    <string name="pref_file_server_address">Server Address</string>
    <string name="pref_file_server_username">Username</string>
    <string name="pref_file_server_password">Password</string>

    <!-- Database Preferences -->
    <string name="pref_db_server_category">Database Server</string>
    <string name="pref_db_server_name">Database Name</string>
    <string name="pref_db_server_address">Database Address</string>
    <string name="pref_db_server_username">Database Username</string>
    <string name="pref_db_server_password">Database Password</string>
    <string name="chkBoxLabel">Auto Detect</string>

</resources>
