<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/contentWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="60sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <RadioGroup
                android:id="@+id/radBtnGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rad_walk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_radio_walk" />

                <RadioButton
                    android:id="@+id/rad_jump"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_radio_jump" />

                <RadioButton
                    android:id="@+id/rad_squat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_radio_squat" />

                <RadioButton
                    android:id="@+id/rad_sit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_radio_sit" />

                <RadioButton
                    android:id="@+id/rad_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_radio_lay" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <Button
                android:id="@+id/btnStartStop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Start" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Upload" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>